# benchmark_tool

./: .gitignore  .gitmodules  PROJECT_STRUCTURE_ANALYSIS.md  README.md  RENAMING_GUIDE.md  demo_from_colmap_sparse_points.py  imgui.ini  pyproject.toml
benchmark/: dataloader.py  demo.py  metrics.py
benchmark/benchmark_tools/: __init__.py  dataloader.py  metrics.py
benchmark/benchmark_tools/postprocessing/: __init__.py
benchmark/benchmark_tools/scripts/: dense_n_view_benchmark.py  groundtruth_analysis.py
benchmark/benchmark_tools/utils/: cropping.py
benchmark/dataset_tools/: camera.py  datasets.py  pointcloud.py  utils.py  visualization.py
benchmark/postprocessing/: __init__.py
benchmark/scripts/: groundtruth_analysis.py  test.py
benchmark/utils/: __init__.py  cropping.py
configs/: dense_n_view_benchmark.yaml  grountruth_analysis.yaml
configs/dataset_test/: BotanicGarden.yaml
configs/dataset_tools/: BotanicGarden.yaml  DigiForests.yaml  PolyTunnel.yaml  TartanAir.yaml
configs/machine/: default.yaml
configs/model/: depth_anything_v2.yaml  depth_anything_v3.yaml  depth_enhancement.yaml  hloc.yaml  mapanything.yaml  mast3r.yaml  multi_view_stereo.yaml  priorda.yaml  vggt.yaml
dense_slam_benchmark/benchmark_tools/: dataloader.py
dense_slam_benchmark/dataset_tools/: undistort.py  utils.py  visualization.py  visualizer.py
dense_slam_benchmark_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: 03_camera.py  demo.py  demo2.py  droid_visualizer.py
tools/: run_botanicgarden_scene_models.sh
(+26 files in other folders)
