[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "benchmark_tool"
version = "0.0.1"
authors = [
  { name="PengZai", email="649365461@qq.com" }
]
description = "A reconstruction benchmark tool"
readme = "README.md"
requires-python = ">=3.10.0"

dependencies = [
    "moderngl_window",
    "open3d",
    "opencv-python",
    "pytransform3d",
    "trimesh",
    "pycolmap",
    "hydra-core",
    "torch",
    "torchvision"
]


[project.optional-dependencies]
mast3r = ["mast3r @ git+https://github.com/Nik-V9/mast3r"]
prior-depth-anything = ["prior-depth-anything @ git+https://github.com/PengZai/Prior-Depth-Anything.git"]
mapanything = ["mapanything @ git+https://github.com/facebookresearch/map-anything.git"]
depth-anything-V2 = ["depth-anything-v2 @ git+https://github.com/PengZai/Depth-Anything-V2.git"]

[tool.setuptools]
# Disable automatic package discovery to avoid conflicts
packages = ["benchmark"]